language/move-lang/tests/move_check/translated_ir_tests/move/commands/while_move_local.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/translated_ir_tests/move/commands/while_move_local.move:7:13
  │
7 │         y = move x;
  │             ^^^^^^
  │             │
  │             Invalid usage of variable 'x'
  │             The variable might not have a value due to this position. The variable must be assigned a value before being used

